--- a/styles/custom.css
+++ b/styles/custom.css
@@ -343,8 +343,8 @@ md-tabs .md-tab.md-focused {
     color: #fff;
     background: #3c8719;
     max-width: none!important;
-    /*opacity: 1;
-    pointer-events: auto;*/
+    opacity: 1;
+    pointer-events: auto;
 }
 
 .hometabs md-tabs[md-border-bottom] md-tabs-wrapper {
@@ -365,8 +365,8 @@ md-tabs .md-tab.md-focused {
     border-radius: 3px;
     margin-right: 5px;
     max-width: none!important;
-    /*pointer-events: none;
-    opacity: 0.5;*/
+    pointer-events: none;
+    opacity: 0.5;
     cursor: pointer;
 }
 
