--- a/views/tmpl/admin/user/users.html
+++ b/views/tmpl/admin/user/users.html
@@ -181,13 +181,13 @@
 												<p>{{ user.user_phone_no }}</p>
 											</md-card-content>
 											<div class="md-actions" layout="row" layout-align="center center">
-												<a class="btn btn-orange btn-border btn-rounded" ui-sref="app.admin.user.view-user">View</a>
-												<a class="btn btn-success btn-border btn-rounded" ui-sref="app.admin.user.edit-user">Edit</a>
-												<a class="btn btn-danger btn-border btn-rounded" ng-click="showConfirm($event)">Delete</a>
+												<a class="btn btn-orange btn-border btn-rounded" ui-sref="app.admin.user.view-user({user_id:user.user_id})">View</a>
+												<a class="btn btn-success btn-border btn-rounded" ui-sref="app.admin.user.edit-user({user_id:user.user_id})">Edit</a>
+												<a class="btn btn-danger btn-border btn-rounded" ng-click="showConfirm($event,user.user_id)">Delete</a>
 											</div>
 										</md-card>										
 									</md-content>
-									<button class="btn btn-success btn-border btn-rounded m-0-auto f-wm" ng-click="loadMore()" ng-style="lmbtn">Load more</button>
+									<button class="btn btn-success btn-border btn-rounded m-0-auto f-wm" ng-click="usersInit()" ng-style="lmbtn">Load more</button>
 								</div>
 							</div>
 						</div>
