--- a/views/tmpl/admin/user/edit-user.html
+++ b/views/tmpl/admin/user/edit-user.html
@@ -100,7 +100,7 @@
 						<h4 class="mb-0"><strong>Arnold</strong></h4>
 						<span class="text-muted">+1 212 1467 8920</span>
 						<div class="mt-40">
-							<a ui-sref="app.admin.user.view-user" class="btn btn-rounded-20 btn-sm bg-slategray dk">View User</a>
+							<a ui-sref="app.admin.user.view-user({user_id:editUser.user_id})" class="btn btn-rounded-20 btn-sm bg-slategray dk">View User</a>
 							<a ng-click="deleteUser($event,editUser.user_id)" class="btn btn-rounded-20 btn-sm bg-danger ml-5">Delete User</a>
 						</div>
 
@@ -128,32 +128,33 @@
 								<md-tab label="Account">
 								<md-content>
 									<div class="modal-body p-0 mt-10">
+									<span class="error">{{editUserMessage}}</span>
 										<form role="form" ng-submit="submitEditUser(editUser, user_edit)" name="user_edit" ng-validate="validationOptions">
 											<div class="row">
 												<div class="form-group col-sm-6 col-md-6">
 													<label for="">First Name</label>
-													<input type="text" class="form-control" id="first-name" ng-model="editUser.first_name" ng-value="userData.user_first_name" name="first-name" required>
+													<input type="text" class="form-control" id="first-name" ng-model="editUser.first_name" ng-value="editUser.user_first_name" name="first-name" required>
 												</div>
 												<div class="form-group col-sm-6 col-md-6">			
 													<label for="">Last Name</label>
-													<input type="text" class="form-control" id="last-name" ng-model="editUser.last_name" ng-value="userData.user_last_name" name="last-name" required>
+													<input type="text" class="form-control" id="last-name" ng-model="editUser.last_name" ng-value="editUser.user_last_name" name="last-name" required>
 												</div>
 												<div class="form-group col-sm-6 col-md-6">
 													<label for="">Email</label>
-													<input type="email" class="form-control" id="email" ng-model="editUser.email" ng-value="userData.user_email" readonly>
+													<input type="email" class="form-control" id="email" ng-model="editUser.email" ng-value="editUser.user_email" readonly>
 												</div>
 												<div class="form-group col-sm-6 col-md-6">
 													<label for="">Profile Photo</label>
 													<div class="profilephoto">
-														<input ui-jq="filestyle" type="file" class="filestyle profilep" ui-options="{ buttonText: 'Find file', iconName: 'fa fa-inbox' }" id="profilep-2" tabindex="-1">
-														<div class="bootstrap-filestyle input-group"><input type="text" class="form-control " disabled=""> <span class="group-span-filestyle input-group-btn" tabindex="0"><label for="profilep-2" class="btn btn-default "><span class="glyphicon fa fa-inbox"></span> Find file</label></span></div>
+														<!-- <input ui-jq="filestyle" type="file" class="filestyle profilep" ui-options="{ buttonText: 'Find file', iconName: 'fa fa-inbox' }" id="profilep-2" tabindex="-1">
+														<div class="bootstrap-filestyle input-group"><input type="text" class="form-control " disabled=""> <span class="group-span-filestyle input-group-btn" tabindex="0"><label for="profilep-2" class="btn btn-default "><span class="glyphicon fa fa-inbox"></span> Find file</label></span></div> -->
 													</div>
 												</div>
 											</div>
 											<div class="row">
 												<div class="form-group col-sm-6 col-md-6">
 													<label for="">Name as appears on LCD</label>
-													<input type="number" class="form-control" id="name_on_lcd" ng-model="editUser.name_on_lcd" name="name_on_lcd" required>
+													<input type="text" class="form-control" id="user_name_on_lcd" ng-model="editUser.user_name_on_lcd" name="user_name_on_lcd" required ng-value="editUser.user_name_on_lcd">
 												</div>
 												<div class="form-group col-sm-6 col-md-6">			
 													<label for="">Phone</label>
@@ -161,17 +162,17 @@
 												</div>
 												<div class="form-group col-sm-6 col-md-6">
 													<label for="">Address</label>
-													<input type="emial" name="" id="" class="form-control" value="558 Margaret Street, LA, CA-90001, USA">
+													<input type="emial" name="" id="" class="form-control" ng-model="editUser.address" ng-value="editUser.user_address">
 												</div>
 												<div class="form-group col-sm-6 col-md-6">
 													<label for="">Zip Code</label>
-													<input type="text" class="form-control" id="address1" ng-model="editUser.address" ng-value="userData.user_address" name="address1" required>
+													<input type="text" class="form-control" id="address1"  name="address1" ng-model="editUser.zipcode" ng-value="editUser.user_zipcode" required>
 												</div>
 											</div>
 											<div class="row" ng-controller="ActivebtnCtrl">
 												<div class="form-group col-sm-6 col-md-6">
 													<label for="">Password</label>
-													<input type="password" class="form-control" id="password" ng-model="editUser.password" ng-value="userData.password" name="password" required>
+													<input type="password" class="form-control" id="password" ng-model="editUser.password" ng-value="editUser.password" name="password" required>
 												</div>
 												<div class="form-group col-sm-6 col-md-6">
 													<label for="">Confirm Password</label>
@@ -187,7 +188,7 @@
 												<div class="form-group col-sm-6 col-md-3" ng-hide="radioModel=='Inactive'">
 													<label for="">Expiration Date</label>
 													<div class="input-group userexp" ng-controller="DatepickerDemoCtrl" >
-														<input type="text" class="form-control" uib-datepicker-popup="{{format}}" ng-model="editUser.expiration_date" is-open="opened" datepicker-options="dateOptions" ng-required="true" close-text="Close" />
+														<input type="text" class="form-control" uib-datepicker-popup="dd/MM/yyyy" ng-model="editUser.expiration_date" is-open="opened" datepicker-options="dateOptions" ng-required="true" close-text="Close" />
 														<span class="input-group-btn">
 															<button type="button" class="btn btn-default" ng-click="open($event)" style="padding: 8px 14px;"><i class="glyphicon glyphicon-calendar"></i></button>
 														</span>
@@ -215,62 +216,25 @@
 													</li>
 												</ul>
 												<script type="text/ng-template" id="myModalContent.html">
-													<div class="modal-header"><h4 class="modal-title custom-font">User Groups</h4></div>
-													<div class="hometabs">
-														<div class="overflow groupslists">
-															<div class="col-md-12 mt-20">
-																<ul>
-																	<li>
-																		<label class="checkbox checkbox-custom-alt checkbox-custom-sm"> <input type="checkbox"><i></i> Residence <small>(8 Users)</small></label>
-																	</li>
-																	<li>
-																		<label class="checkbox checkbox-custom-alt checkbox-custom-sm"> <input type="checkbox"><i></i> Office Hours <small>(40 Users)</small></label>
-																	</li>
-																	<li>
-																		<label class="checkbox checkbox-custom-alt checkbox-custom-sm"> <input type="checkbox"><i></i> Office Admin <small>(5 Users)</small></label>
-																	</li>
-																	<li>
-																		<label class="checkbox checkbox-custom-alt checkbox-custom-sm"> <input type="checkbox"><i></i> Maintenance <small>(5 Users)</small></label>
-																	</li>
-																	<li>
-																		<label class="checkbox checkbox-custom-alt checkbox-custom-sm"> <input type="checkbox"><i></i> Delivery <small>(2 Users)</small></label>
-																	</li>
-																	<li>
-																		<label class="checkbox checkbox-custom-alt checkbox-custom-sm"> <input type="checkbox"><i></i> Housekeeping Staff <small>(45 Users)</small></label>
-																	</li>
-																	<li>
-																		<label class="checkbox checkbox-custom-alt checkbox-custom-sm"> <input type="checkbox"><i></i> 24x7 Hours <small>(32 Users)</small></label>
-																	</li>
-																	<li>
-																		<label class="checkbox checkbox-custom-alt checkbox-custom-sm"> <input type="checkbox"><i></i> Residence <small>(8 Users)</small></label>
-																	</li>
-																	<li>
-																		<label class="checkbox checkbox-custom-alt checkbox-custom-sm"> <input type="checkbox"><i></i> Housekeeping Hours <small>(15 Users)</small></label>
-																	</li>
-																	<li>
-																		<label class="checkbox checkbox-custom-alt checkbox-custom-sm"> <input type="checkbox"><i></i> Office Admin <small>(5 Users)</small></label>
-																	</li>
-																	<li>
-																		<label class="checkbox checkbox-custom-alt checkbox-custom-sm"> <input type="checkbox"><i></i> Maintenance <small>(5 Users)</small></label>
-																	</li>
-																	<li>
-																		<label class="checkbox checkbox-custom-alt checkbox-custom-sm"> <input type="checkbox"><i></i> Delivery <small>(2 Users)</small></label>
-																	</li>
-																	<li>
-																		<label class="checkbox checkbox-custom-alt checkbox-custom-sm"> <input type="checkbox"><i></i> Housekeeping Staff <small>(40 Users)</small></label>
-																	</li>
-																	<li>
-																		<label class="checkbox checkbox-custom-alt checkbox-custom-sm"> <input type="checkbox"><i></i> 24x7 Services <small>(42 Users)</small></label>
-																	</li>
-																</ul>
-																<a ui-sref="app.admin.user.user-groups" ng-click="cancel()" class="pull-right mt-15 mb-20">Create User Group</a>
+													<form ng-submit="assignEditUserGroup(usergroup)">
+														<div class="modal-header"><h4 class="modal-title custom-font">User Groups</h4></div>
+														<div class="hometabs">
+															<div class="overflow groupslists">
+																<div class="col-md-12 mt-20">
+																		<ul>
+																			<li ng-repeat="user_group in usergroups">
+																				<label class="checkbox checkbox-custom-alt checkbox-custom-sm"> <input type="checkbox" value="{{user_group.usergroup_id}}" name="" ng-model="usergroup.usergrouparr[user_group.usergroup_id]"><i></i> {{user_group.usergroupName}} <small>({{user_group.count}} Users)</small></label>
+																			</li>
+																		</ul>
+																		<a ui-sref="app.admin.user.user-groups" ng-click="cancel()" class="pull-right mt-15 mb-20">Create User Group</a>
+																</div>
 															</div>
 														</div>
-													</div>
-													<div class="modal-footer">
-														<button class="btn btn-lightred btn-rounded btn-ef btn-ef-4 btn-ef-4c" ng-click="cancel()"><i class="fa fa-arrow-left"></i> Close</button>
-														<button type="submit" class="btn btn-success btn-rounded btn-ef btn-ef-3 btn-ef-3c"><i class="fa fa-arrow-right"></i> Submit</button>	
-													</div>											
+														<div class="modal-footer">
+															<button class="btn btn-lightred btn-rounded btn-ef btn-ef-4 btn-ef-4c" ng-click="cancel()"><i class="fa fa-arrow-left"></i> Close</button>
+															<button type="submit" class="btn btn-success btn-rounded btn-ef btn-ef-3 btn-ef-3c"><i class="fa fa-arrow-right"></i> Submit</button>	
+														</div>											
+													</form>
 												</script>
 											</div>
 											<div class="tile-body p-0">
@@ -282,16 +246,8 @@
 														</tr>
 													</thead>
 													<tbody style="font-size:14px;">
-														<tr>
-															<td><a ui-sref="app.admin.user.user-groups-members" ng-click="cancel()">24x7 Hours <small>(40 Users)</small></a></td>
-															<td><button type="button" class="btn btn-danger btn-rounded btn-ef btn-ef-5 btn-ef-5b"><i class="fa fa-trash-o"></i> <span>Delete</span></button></td>
-														</tr>
-														<tr>
-															<td><a ui-sref="app.admin.user.user-groups-members" ng-click="cancel()">Office Hours <small>(35 Users)</small></a></td>
-															<td><button type="button" class="btn btn-danger btn-rounded btn-ef btn-ef-5 btn-ef-5b"><i class="fa fa-trash-o"></i> <span>Delete</span></button></td>
-														</tr>
-														<tr>
-															<td><a ui-sref="app.admin.user.user-groups-members" ng-click="cancel()">Housekeeping Hours <small>(15 Users)</small></a></td>
+														<tr ng-repeat="assign_usergroup in userGroup">
+															<td><a ui-sref="app.admin.user.user-groups-members" ng-click="cancel()">{{assign_usergroup.usergroup_name}} <small>({{assign_usergroup.usergroup_user_count}} Users)</small></a></td>
 															<td><button type="button" class="btn btn-danger btn-rounded btn-ef btn-ef-5 btn-ef-5b"><i class="fa fa-trash-o"></i> <span>Delete</span></button></td>
 														</tr>
 													</tbody>
