--- a/views/tmpl/admin/user/view-user.html
+++ b/views/tmpl/admin/user/view-user.html
@@ -31,7 +31,7 @@
 							</div>
 							<div class="col-xs-6">	
 								<div class="itxt">							
-									<p class="text-elg text-strong mt-5 mb-5">22</p>
+									<p class="text-elg text-strong mt-5 mb-5">{{dashboardData.primary_device}}</p>
 									<span class="text-lg">Devices</span>
 								</div>
 							</div>
@@ -52,7 +52,7 @@
 							</div>
 							<div class="col-xs-6">	
 								<div class="itxt">							
-									<p class="text-elg text-strong mt-5 mb-5">22</p>
+									<p class="text-elg text-strong mt-5 mb-5">{{dashboardData.door}}</p>
 									<span class="text-lg">Doors</span>
 								</div>
 							</div>
@@ -73,7 +73,7 @@
 							</div>
 							<div class="col-xs-6">
 								<div class="itxt">								
-									<p class="text-elg text-strong mt-5 mb-5">45</p>
+									<p class="text-elg text-strong mt-5 mb-5">{{dashboardData.user}}</p>
 									<span class="text-lg">Users</span>
 								</div>	
 							</div>
@@ -100,8 +100,8 @@
 						<h4 class="mb-0"><strong>Arnold</strong></h4>
 						<span class="text-muted">+1 212 1467 8920</span>
 						<div class="mt-40">
-							<a ui-sref="app.admin.user.edit-user" class="btn btn-rounded-20 btn-sm btn-greensea">Edit User</a>
-							<a ng-click="showConfirm($event)" class="btn btn-rounded-20 btn-sm bg-danger ml-5">Delete User</a>
+							<a ui-sref="app.admin.user.edit-user({user_id: editUser.user_id})" class="btn btn-rounded-20 btn-sm btn-greensea">Edit User</a>
+							<a ng-click="deleteUser($event,editUser.user_id)" class="btn btn-rounded-20 btn-sm bg-danger ml-5">Delete User</a>
 						</div>
 
 					</div> 
@@ -130,15 +130,15 @@
 											<h4><strong>Account</strong> Details</h4>
 										</div>
 										<div class="form-group profiledetail">
-											<p><label>Name</label> Arnold</p>
-											<p><label>E-mail</label> arnold@gmail.com</p>
-											<p><label>Phone</label> +1 212 1467 1212</p>
-											<p><label>LCD Name</label> arnold</p>
-											<p><label>Address</label> 558 Margaret Street, LA, CA-90001, USA</p>
-											<p><label>Zip Code</label> 90001</p>
+											<p><label>Name</label>{{userData.user_first_name}} {{userData.user_last_name}}</p>
+											<p><label>E-mail</label> {{userData.user_email}}</p>
+											<p><label>Phone</label>{{userData.user_phone_no}}</p>
+											<p><label>LCD Name</label>{{userData.user_name_on_lcd}} </p>
+											<p><label>Address</label>{{userData.user_address}}</p>
+											<p><label>Zip Code</label> {{userData.user_zipcode}}</p>
 											<p><label>Password</label> *********</p>
-											<p><label>Status</label> Active</p>
-											<p><label>Expiration Date</label> 15/06/2017</p>
+											<p><label>Status</label>{{userData.user_status}}</p>
+											<p><label>Expiration Date</label>{{userData.user_expiration_date}}</p>
 										</div>
 									</div>
 								</div>
@@ -237,10 +237,10 @@
 														<tr>
 															<th>Group Name</th>
 														</tr>
-													</thead>
+													</thead>{{userGroup}}
 													<tbody style="font-size:14px;">
-														<tr>
-															<td><a ui-sref="app.admin.user.user-groups-members" ng-click="cancel()">24x7 Hours <small>(40 Users)</small></a></td>
+														<tr ng-repeat="x in userGroup">
+															<td><a ui-sref="app.admin.user.user-groups-members" ng-click="cancel()">{{x.usergroupName}}<small>({{x.count}} Users)</small></a></td>
 														</tr>
 														<tr>
 															<td><a ui-sref="app.admin.user.user-groups-members" ng-click="cancel()">Office Hours <small>(35 Users)</small></a></td>
